Adding indexing filters lib to the shell ibict and lareferencia profiles

--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~   Copyright (c) 2013-2022. LA Referencia / Red CLARA and others
-  ~
-  ~   This program is free software: you can redistribute it and/or modify
-  ~   it under the terms of the GNU Affero General Public License as published by
-  ~   the Free Software Foundation, either version 3 of the License, or
-  ~   (at your option) any later version.
-  ~
-  ~   This program is distributed in the hope that it will be useful,
-  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~   GNU Affero General Public License for more details.
-  ~
-  ~   You should have received a copy of the GNU Affero General Public License
-  ~   along with this program.  If not, see <http://www.gnu.org/licenses/>.
-  ~
-  ~   This file is part of LA Referencia software platform LRHarvester v4.x
-  ~   For any further information please contact Lautaro Matas <lmatas@gmail.com>
-  -->
+<!-- ~ Copyright (c) 2013-2022. LA Referencia / Red CLARA and others ~ ~ 
+	This program is free software: you can redistribute it and/or modify ~ it 
+	under the terms of the GNU Affero General Public License as published by 
+	~ the Free Software Foundation, either version 3 of the License, or ~ (at 
+	your option) any later version. ~ ~ This program is distributed in the hope 
+	that it will be useful, ~ but WITHOUT ANY WARRANTY; without even the implied 
+	warranty of ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+	~ GNU Affero General Public License for more details. ~ ~ You should have 
+	received a copy of the GNU Affero General Public License ~ along with this 
+	program. If not, see <http://www.gnu.org/licenses/>. ~ ~ This file is part 
+	of LA Referencia software platform LRHarvester v4.x ~ For any further information 
+	please contact Lautaro Matas <lmatas@gmail.com> -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -63,11 +56,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>7.5.4</version>
-        </dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.5.4</version>
+		</dependency>
 
 	</dependencies>
 
@@ -81,7 +74,7 @@
 			</dependencies>
 		</profile>
 
-        <!-- lareferencia profile -->
+		<!-- lareferencia profile -->
 		<profile>
 			<id>lareferencia</id>
 			<properties></properties>
@@ -89,6 +82,11 @@
 				<dependency>
 					<groupId>org.lareferencia</groupId>
 					<artifactId>lareferencia-entity-lib</artifactId>
+					<version>4.1.0</version>
+				</dependency>
+				<dependency>
+					<groupId>org.lareferencia</groupId>
+					<artifactId>lareferencia-indexing-filters-lib</artifactId>
 					<version>4.1.0</version>
 				</dependency>
 				<dependency>
@@ -108,7 +106,9 @@
 								<phase>package</phase>
 								<configuration>
 									<target>
-										<copy overwrite="true" file="config/lareferencia-context.xml" tofile="config/third-party-context.xml" />
+										<copy overwrite="true"
+											file="config/lareferencia-context.xml"
+											tofile="config/third-party-context.xml" />
 									</target>
 								</configuration>
 								<goals>
@@ -121,7 +121,7 @@
 			</build>
 		</profile>
 
-        <!-- rcaap profile -->
+		<!-- rcaap profile -->
 		<profile>
 			<id>rcaap</id>
 			<properties></properties>
@@ -153,7 +153,8 @@
 								<phase>package</phase>
 								<configuration>
 									<target>
-										<copy overwrite="true" file="config/rcaap-context.xml" tofile="config/third-party-context.xml" />
+										<copy overwrite="true" file="config/rcaap-context.xml"
+											tofile="config/third-party-context.xml" />
 									</target>
 								</configuration>
 								<goals>
@@ -166,7 +167,7 @@
 			</build>
 		</profile>
 
-        <!-- ibict profile -->
+		<!-- ibict profile -->
 		<profile>
 			<id>ibict</id>
 			<properties></properties>
@@ -174,6 +175,11 @@
 				<dependency>
 					<groupId>org.lareferencia</groupId>
 					<artifactId>lareferencia-entity-lib</artifactId>
+					<version>4.1.0</version>
+				</dependency>
+				<dependency>
+					<groupId>org.lareferencia</groupId>
+					<artifactId>lareferencia-indexing-filters-lib</artifactId>
 					<version>4.1.0</version>
 				</dependency>
 				<dependency>
@@ -203,7 +209,8 @@
 								<phase>package</phase>
 								<configuration>
 									<target>
-										<copy overwrite="true" file="config/ibict-context.xml" tofile="config/third-party-context.xml" />
+										<copy overwrite="true" file="config/ibict-context.xml"
+											tofile="config/third-party-context.xml" />
 									</target>
 								</configuration>
 								<goals>
@@ -226,7 +233,7 @@
 					<executable>true</executable>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -236,8 +243,11 @@
 						<phase>package</phase>
 						<configuration>
 							<target>
-								<copy overwrite="true" file="target/${project.artifactId}-${project.version}.jar" tofile="${lareferencia.shell.appname}.jar" />
-								<chmod file="${lareferencia.shell.appname}.jar" perm="ugo+rx"/>
+								<copy overwrite="true"
+									file="target/${project.artifactId}-${project.version}.jar"
+									tofile="${lareferencia.shell.appname}.jar" />
+								<chmod file="${lareferencia.shell.appname}.jar"
+									perm="ugo+rx" />
 							</target>
 						</configuration>
 						<goals>
@@ -249,7 +259,8 @@
 						<phase>package</phase>
 						<configuration>
 							<target>
-								<copy overwrite="true" file="config/empty-context.xml" tofile="config/third-party-context.xml" />
+								<copy overwrite="true" file="config/empty-context.xml"
+									tofile="config/third-party-context.xml" />
 							</target>
 						</configuration>
 						<goals>
