--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
 					<groupId>org.lareferencia</groupId>
 					<artifactId>lareferencia-contrib-rcaap</artifactId>
 					<version>4.1.0</version>
+					<exclusions>
+						<exclusion>  <!-- declare the exclusion here -->
+							<groupId>org.apache.lucene</groupId>
+							<artifactId>lucene-queryparser</artifactId>	
+						</exclusion>
+					</exclusions>
 				</dependency>
 				<dependency>
 					<groupId>org.lareferencia</groupId>
