--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,12 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.5.4</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<profiles>
