update sql tables for dark

--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,11 @@
 					<artifactId>lareferencia-contrib-ibict</artifactId>
 					<version>4.2.3</version>
 				</dependency>
+				<dependency>
+					<groupId>org.lareferencia</groupId>
+					<artifactId>lareferencia-dark-lib</artifactId>
+					<version>4.2.3</version>
+				</dependency>
 			</dependencies>
 			<build>
 				<plugins>
