Add config for H2 and SQLite main db

--- a/config/application.properties.d/01-dbconnection.properties
+++ b/config/application.properties.d/01-dbconnection.properties
@@ -5,13 +5,12 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
 
 # Hibernate ddl auto (create, create-drop, validate, update)
+# Recommended: 'none' or 'validate' for Postgres (Production), 'update' for H2/SQLite (Dev/Test)
 spring.jpa.hibernate.ddl-auto = none
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.open-in-view = true
